syntax = "proto3";

package itgram.tracking.domain.vehicle;

option go_package = "github.com/itgram/tracking/domain/vehicle";

message VehicleRegistered {
  string vehicle_id = 1;
  string model = 2;
}

message VehicleMaxSpeedAdjusted {
  string vehicle_id = 1;
  int32 max_speed = 2;
}

message AckEvent {
  bool Success = 1;
}